GN-30 Fix bug with logo icon being too small

--- a/src/Header/Header.module.scss
+++ b/src/Header/Header.module.scss
@@ -44,7 +44,7 @@
     color: $colour-true-black;
   }
 
-  svg.icon {
+  .icon {
     height: 100%;
     width: auto;
   }
